--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -13,6 +13,14 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+a {
+  color: black;
+}
+
+a :hover {
+  color: blueviolet;
+}
+
 .el-card {
   margin-bottom: 10px;
 }
